# medn

./: .env.example  .gitignore  justfile  license  loadenv.sh  migrate.just  package-lock.json
backend/: Cargo.toml  build.rs
backend/migrations/: 20240725144058_users_table.up.sql  20240725173107_sessions_table.down.sql  20240725173107_sessions_table.up.sql  20240725173124_metadata_table.down.sql  20240725173124_metadata_table.up.sql  20240730013904_configuration.down.sql  20240730013904_configuration.up.sql  20240804063828_shared_files.down.sql  20240804063828_shared_files.up.sql
backend/src/: main.rs
backend/src/cron/: clear_expired_sessions.rs  mod.rs  register_cron.rs
backend/src/routes/: auth.rs  config.rs  mod.rs  session.rs
backend/src/utils/: authorization.rs  config.rs  database.rs  mod.rs  paths.rs  responses.rs  storage.rs  tokens.rs
frontend/: .babelrc  index.html  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js
frontend/src/: common.d.ts  global.css  index.tsx  utils.ts
frontend/src/components/input/: component.tsx  styles.css
frontend/src/components/progress/: component.tsx  styles.css
frontend/src/components/sidebar/: component.tsx  styles.css
frontend/src/hooks/: use_fetch.ts  use_notifications.tsx  use_route.ts  use_user.ts  use_user.tsx
frontend/src/pages/api_settings/: page.tsx
frontend/src/pages/login/: page.tsx  styles.css
frontend/src/pages/not_found/: page.tsx  styles.css
frontend/src/pages/personal/: page.tsx
themes/: dark.theme.css  light.theme.css
(+3 files in other folders)
